🌱 Fix Comment content line wrap, close #13429

--- a/components/comment/style/index.less
+++ b/components/comment/style/index.less
@@ -61,6 +61,10 @@
         white-space: nowrap;
       }
     }
+
+    &-detail p {
+      white-space: pre-wrap;
+    }
   }
 
   &-actions {
